--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python:
-  -"3.6"
+  - "3.6"
+dist: xenial  
 
 services:
   - docker
@@ -8,4 +9,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-  -docker-compose run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
